# docker-practice

./: Dockerfile  app.py  pyproject.toml
